#0 - Changing routes dingo api routes

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,17 @@ APP_DEBUG=true
 APP_KEY=h8QWZoFJoqPLypjRXUZvos9qz6ad7FDv
 APP_TIMEZONE=UTC
 
+
+# Config Dingo Api
+API_STANDARDS_TREE=vnd
+API_SUBTYPE=lumen
+API_PREFIX=api
+API_DOMAIN=api.myapp.com
+API_VERSION=v1
+API_NAME=""
+API_DEBUG=true
+
+
 DB_CONNECTION=
 DB_HOST=
 DB_PORT=
