--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/lumen-framework": "5.5.*",
         "vlucas/phpdotenv": "~2.2",
         "prettus/l5-repository": "^2.6",
-        "laravelista/lumen-vendor-publish": "^2.1"
+        "laravelista/lumen-vendor-publish": "^2.1",
+        "dingo/api": "2.0.0-alpha1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
